# mywords

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
docs/superpowers/plans/: 2026-06-09-web-ui.md  2026-06-15-auto-frontend-build.md  2026-06-15-collapsible-sidebar-compact-cards.md
docs/superpowers/specs/: 2026-06-09-web-ui-design.md  2026-06-09-yaml-to-sqlite-design.md  2026-06-15-auto-frontend-build-design.md  2026-06-15-collapsible-sidebar-compact-cards-design.md
scripts/: import_yaml_to_sqlite.py
src/: db.rs  error.rs  main.rs  static_files.rs
src/handlers/: mod.rs  quiz.rs  review.rs  words.rs
src/services/: quiz.rs  review.rs  words.rs
web/: package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/dashboard/: Bar3D.tsx  RingProgress3D.tsx  StatsCards.tsx
web/src/components/layout/: MainLayout.tsx  Sidebar.tsx
web/src/components/shared/: CanvasBackground.tsx  Card3D.tsx  ParticleExplosion.tsx
web/src/hooks/: useWords.ts
web/src/lib/: i18n.tsx
web/src/locales/: en.ts  zh.ts
web/src/pages/: Dashboard.tsx  Quiz.tsx  Review.tsx  WordDetail.tsx  WordsList.tsx
